2013-04-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #47453

2013-04-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added API for getting controller properties, resolves #38398

2013-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.0, resolves #46842

2012-07-30 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.6.0

2012-07-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added new "engine" property to Data Filter structure and base class, resolves #39190

2012-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.5.0

2012-07-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added check for missing service, resolves #38739

2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some code, verified compatibility with TYPO3 4.7, raised requirements to TYPO3 4.5, resolves #38400

2012-04-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.4.0

2012-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed obsolete method tx_tesseract_utilities::wrapMessage(), resolves #32280

2012-03-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved initEmptyDataStrucure() method to data provider base class instead of interface, resolves #35048
	* Corrected creation of empty data structure to take structure type into account, resolves #35051

2012-02-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.3.0

2012-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added documentation about new negate flag for filter conditions, resolves #33322

2012-01-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected description of tx_tesseract_datacontroller_output::getPrefixId(), resolves #33154
	* Added API for message queue handling in the controller, resolves #9072

2012-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>
