@@ -1,3 +1,7 @@
+2013-05-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added template retrieval utility (FAL support), resolves #48470
+
 2013-04-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Verified compatibility with TYPO3 CMS 6.1, resolves #47453
